# monkey-ocr

./: .dockerignore  .env.build.example  .env.example  .gitignore  AGENTS.md  Dockerfile.ocr  README.md  deploy_ocr.sh  requirements.txt  setup_models.py
backend/: .dockerignore  alembic.ini  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 20260711_0001_initial_ocr_platform.py
backend/contracts/: internal_status_codes.json
backend/dotenv/dev/: .env.app.example  .env.auth.example  .env.build.example  .env.cache.example  .env.clickhouse.example  .env.database.example  .env.engine.example  .env.frontend.example  .env.gateway.example  .env.kafka.example  .env.logging.example  .env.storage.example
backend/dotenv/production/: .env.app.example  .env.auth.example  .env.build.example  .env.cache.example  .env.clickhouse.example  .env.database.example  .env.engine.example  .env.frontend.example  .env.gateway.example  .env.kafka.example  .env.logging.example  .env.storage.example
backend/scripts/: compose.sh  generate_internal_status_codes.py  prepare_hps.sh
backend/services/: go.work  go.work.sum
backend/src/: __init__.py  config.py  container.py  main.py  retention_main.py  worker_main.py
backend/tests/: test_api.py  test_api_keys.py  test_application.py  test_dependency_errors.py  test_domain.py  test_engine.py  test_logger.py  test_readiness.py  test_retention.py  test_retention_persistence.py  test_s3_storage.py  test_sandbox.py  test_sandbox_exchange.py  test_storage_service.py  test_worker.py  test_worker_main.py
(+194 files in other folders)
