[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "monkeyocr-backend"
version = "0.1.0"
description = "Asynchronous OCR job service for MonkeyOCR"
requires-python = ">=3.12"
dependencies = [
  "aioboto3>=15.0,<16",
  "aiokafka>=0.12,<1",
  "alembic>=1.16,<2",
  "asyncpg>=0.30,<1",
  "fastapi>=0.116,<1",
  "httpx>=0.28,<1",
  "Pillow>=11.3,<12",
  "psycopg[binary]>=3.2,<4",
  "PyMuPDF>=1.26,<2",
  "pydantic>=2.11,<3",
  "pydantic-settings>=2.10,<3",
  "python-magic>=0.4.27,<1",
  "SQLAlchemy>=2.0,<3",
  "uvicorn[standard]>=0.35,<1",
  "uuid6>=2025.0.1,<2026",
]

[project.optional-dependencies]
test = [
  "pytest>=8.4,<9",
  "pytest-asyncio>=1.1,<2",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["."]
testpaths = ["tests"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "ASYNC"]
